[package]
name = "bvreader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
criterion = "0.5.1"
regex = "1.10.2"
thiserror = "1.0.51"


[profile.release]
debug = true


[[bench]]
name = "parser_benchmark"
harness = false
