[package]
name = "bvreader"
version = "0.1.5"
edition = "2021"
description = "Reader for the BrainVision data format"
documentation = "https://docs.rs/bvreader"
repository = "https://github.com/J-Bockhofer/bvreader"
license = "MIT"
keywords = ["eeg", "BrainVision"]
categories = ["science::neuroscience","parsing", "parser-implementations"]
readme = "readme.md"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
criterion = "0.5.1"
regex = "1.10.2"
thiserror = "1.0.51"

[[bench]]
name = "parser_benchmark"
harness = false
